build/apps/lms/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lms
  namespace: media
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: media.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external  
  labels:
    app.kubernetes.io/name: lms
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lms.media.anotherlife.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: lms
          port: 9000
  tls:
    domains:
      - main: media.anotherlife.pl
        sans:
          - .media.anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-media
